--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
 
 
     <string name="toast_recording_permissions">Без разрешения запись невозможна</string>
-    <string name="notification_channel_id" translatable="false">RecordService</string>
-    <string name="notification_channel_name" translatable="true">Recorder</string>
+    <string name="notification_channel_id" translatable="false">RecordServiceVoice</string>
+    <string name="notification_channel_name" translatable="true">RecorderVoice</string>
 </resources>
